..F....... [ZBX-15833] fixed scrollbar position for FF in overlay popups
git-svn-id: svn://svn.zabbix.com/branches/dev@92854 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-15833/frontends/php/styles/blue-theme.css
+++ b/ZBX-15833/frontends/php/styles/blue-theme.css
@@ -2728,6 +2728,9 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     overflow-y: auto;
     margin-left: -10px; }
 
+@-moz-document url-prefix() {
+  .overlay-dialogue.modal .overlay-dialogue-body {
+    padding-right: 10px; } }
 .btn-back-map-container {
   text-align: left;
   position: absolute;
