--- a/ZBX-15833/frontends/php/styles/dark-theme.css
+++ b/ZBX-15833/frontends/php/styles/dark-theme.css
@@ -2752,6 +2752,9 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     overflow-y: auto;
     margin-left: -10px; }
 
+@-moz-document url-prefix() {
+  .overlay-dialogue.modal .overlay-dialogue-body {
+    padding-right: 10px; } }
 .btn-back-map-container {
   text-align: left;
   position: absolute;
