--- a/ZBX-15833/sass/stylesheets/sass/screen.scss
+++ b/ZBX-15833/sass/stylesheets/sass/screen.scss
@@ -3880,6 +3880,7 @@ $form-icon-btn: (
 			margin: 0 0 10px 0;
 			@extend %webkit-scrollbar;
 		}
+
 		.overlay-dialogue-controls {
 			text-align: right;
 			padding: 0px 0px 10px 0px;
@@ -3952,6 +3953,15 @@ $form-icon-btn: (
 		overflow-y: auto;
 		margin-left: -10px;
 		@extend %webkit-scrollbar;
+	}
+}
+
+// Vertical scrollbar position fix for FF
+@-moz-document url-prefix() {
+	.overlay-dialogue.modal {
+		.overlay-dialogue-body {
+			padding-right: 10px;
+		}
 	}
 }
 
